--- a/style.css
+++ b/style.css
@@ -89,5 +89,5 @@ iframe {
     border: none;
 }
 #video-upload-section {
-  display: none; /* Initially hidden */
+  display: none; /* Standardmäßig verborgen */
 }
